--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
     "npm": "6.14.8"
   },
   "scripts": {
-    "start": "node index.js",
-    "backend": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/index.js",
+    "backend": "nodemon server/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client \""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "concurrently": "^5.3.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "heroku": "^7.47.7",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11"
   },
   "devDependencies": {
