--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "ckeditor4": "^4.15.1",
