--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "heroku": "^7.47.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "react-paginate": "^7.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
