--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "npm": "6.14.8"
   },
   "scripts": {
-    "start": "node server/index.js",
+    "start": "npm run start --prefix client \"",
     "backend": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client \""
+    "dev": "concurrently \"npm run backend\""
   },
   "author": "",
   "license": "ISC",
